crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__bandwidth_metrics_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 42
expression: bw
---
BandwidthMetrics {
    bytes_read: 1048576,
    bytes_written: 524288,
    duration: 100µs,
    peak_bandwidth_bytes_per_sec: 900000000000.0,
}
