crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__batch_norm_config_default_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 292
expression: cfg
---
BatchNormConfig {
    num_features: 1,
    eps: 1e-5,
    momentum: 0.1,
    training: false,
}
