crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__batch_norm_config_training_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 298
expression: cfg
---
BatchNormConfig {
    num_features: 256,
    eps: 1e-5,
    momentum: 0.1,
    training: true,
}
