crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__bottleneck_all_variants_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 79
expression: variants
---
[
    MemoryBound,
    ComputeBound,
    LatencyBound,
    Unknown,
]
