crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__coalesced_group_full_mask_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 231
expression: cg
---
CoalescedGroup {
    active_mask: 4294967295,
}
