crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__comm_backend_all_variants_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 359
expression: variants
---
[
    InProcess,
    SharedMemory,
]
