crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__cooperative_group_config_default_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 190
expression: cfg
---
CooperativeGroupConfig {
    group_size: 256,
    grid_sync: false,
    thread_block_cluster: false,
    cluster_size: 1,
    shared_mem_bytes: 0,
}
