crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__cooperative_group_config_with_cluster_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 202
expression: cfg
---
CooperativeGroupConfig {
    group_size: 256,
    grid_sync: false,
    thread_block_cluster: true,
    cluster_size: 4,
    shared_mem_bytes: 0,
}
